--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+12/16/2019 Public DEV 6:
++Health Dispensers
++Towers with AI
++Weapon rework (tiered based trees)
++Improved explosions
++Main Menu update
+
 11/22/2019 Public DEV 5:
 +UI framework for profiles and inventory
 +Rework firing range
